--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-typing-effect": "^2.0.3",
     "animate.css": "^4.1.1",
     "gh-pages": "^5.0.0",
     "react": "^18.2.0",
@@ -19,6 +20,7 @@
     "react-intersection-observer": "^9.4.3",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-typing-effect": "^2.0.5",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
