--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-intersection-observer": "^9.4.3",
     "react-scripts": "5.0.1",
     "react-typing-effect": "^2.0.5",
