--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,10 @@
 {
-  "short_name": "Portfolio App",
-  "name": "Create App",
+  "short_name": "Fedorovich App",
+  "name": "Create Fedorovich App",
+  "developer": {
+    "name": "Sergey Fedorovich",
+    "email": "feddorovich@outlook.com"
+  },
   "icons": [
     {
       "src": "favicon.ico",
