--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^4.8.0",
     "react-intersection-observer": "^9.4.3",
     "react-scripts": "5.0.1",
+    "react-tilt": "^1.0.2",
     "react-typing-effect": "^2.0.5",
     "sass": "^1.62.0",
     "typescript": "^4.4.2",
