manifest.json name change

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Fedorovich App",
-  "name": "Create Fedorovich App",
+  "short_name": "FEDRR.COM App",
+  "name": "FEDRR.COM App",
   "developer": {
     "name": "Sergey Fedorovich",
     "email": "feddorovich@outlook.com"
